Login, Registrar, Seguranca, Jwt, Conexao entre Front e Back

--- a/financeira/src/main/resources/application.properties
+++ b/financeira/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.username=user
 spring.datasource.password=senha
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2cmd
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+
